# notepad-web

./: .gitignore  Cargo.toml  README.md
.github/workflows/: vercel.yml
api/: api.rs
bak/: file.rs
bak/file_cabinets/: index.html
reject/: file.rs
reject/file/: script.js  yy.js
src/: app.rs  database.rs  extra.rs  lib.rs  server.rs  serverless.rs
templates/: index.html  message.html
templates/assets/: script.js  style.css
