[package]
name = "app"
version = "1.0.0"
edition = "2024"

[dependencies]
vercel_runtime = { version = "2", features = ["axum"], optional = true }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tower = { version = "0.5" }
rust-embed = "8"
askama = "0.15"
rand = "0.10"
axum-extra = { version = "0.12", features = ["typed-header"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "sqlite",
] }
tower-http = { version = "0.6", features = ["cors"] }
encoding_rs = "0.8"
log = "0.4"
simple-log = "2.4"

[features]
default = ["serverless"]
serverless = ["vercel_runtime"]
server = []

[[bin]]
name = "api"
path = "api/api.rs"

[lib]
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[profile.release-mini]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
